feat: finish education info

--- a/src/app.less
+++ b/src/app.less
@@ -46,6 +46,10 @@ h1 {
     cursor: pointer;
   }
 
+  .section-model {
+    padding: 0 var(--preview-page-padding);
+  }
+
   .section-title {
     font-size: 14px;
     font-weight: 700;
