feat: 新增其他经历

--- a/src/app.less
+++ b/src/app.less
@@ -13,6 +13,12 @@
   --content-width: 840px;
   --preview-width: 720px;
   --preview-page-padding: 48px;
+
+  // color
+  --primary-color: #6096b4;
+  --second-color: #93bfcf;
+  --third-color: #bdcdd6;
+  --fourth-color: #eee9da;
 }
 
 #app,
@@ -39,6 +45,7 @@ h1 {
 
   > :not(.nav-bar) {
     flex: 1;
+    background-color: #dfe1e5;
   }
 
   .section-model {
