--- a/src/app.less
+++ b/src/app.less
@@ -10,15 +10,40 @@
   -moz-osx-font-smoothing: grayscale;
   text-size-adjust: 100%;
 
-  --content-width: 840px;
+  --content-width: 1152px;
   --preview-width: 720px;
   --preview-page-padding: 48px;
+
+  // 辅助色
+  --color-gray-100: #fafafa;
+  --color-gray-200: #f5f5f5;
+  --color-gray-300: #f0f0f0;
+  --color-gray-400: #d9d9d9;
+  --color-gray-500: #bfbfbf;
+  --color-gray-600: #8c8c8c;
+  --color-gray-700: #595959;
+  --color-gray-800: #434343;
+  --color-gray-900: #262626;
+
+  // 主题色？
+  --color-orange-100: #fff2e8;
+  --color-orange-200: #ffd8bf;
+  --color-orange-300: #ffbb96;
+  --color-orange-400: #ff9c6e;
+  --color-orange-500: #ff7a45;
+  --color-orange-600: #fa541c;
+  --color-orange-700: #d4380d;
+  --color-orange-800: #ad2102;
+  --color-orange-900: #871400;
 
   // color
   --primary-color: #6096b4;
   --second-color: #93bfcf;
   --third-color: #bdcdd6;
   --fourth-color: #eee9da;
+
+  //
+  --hero-title-background: linear-gradient(120deg, #bd34fe 30%, #41d1ff);
 }
 
 #app,
@@ -45,7 +70,7 @@ h1 {
 
   > :not(.nav-bar) {
     flex: 1;
-    background-color: #dfe1e5;
+    // background-color: #dfe1e5;
   }
 
   .section-model {
